--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -20,8 +20,8 @@ purrr::walk(dir(here::here("functions"), full.names = TRUE), source)
 # Load PDS data
 pds <- read_rds(here("data", glue("{fy}-{qt}_final-data.rds"))) %>%
   
-  # Filter HB for fasther knitting when testing
-  # filter(substr(health_board, 1, 1) %in% c("A", "B")) %>%
+  # Filter HB for faster knitting when testing
+  filter(substr(health_board, 1, 1) %in% c("A", "B")) %>%
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
