Update 'About this report' wording

--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -21,7 +21,7 @@ purrr::walk(dir(here::here("functions"), full.names = TRUE), source)
 pds <- read_rds(here("data", glue("{fy}-{qt}_final-data.rds"))) %>%
   
   # Filter HB for faster knitting when testing
-  filter(substr(health_board, 1, 1) %in% c("A", "B")) %>%
+  filter(substr(health_board, 1, 1) %in% c("A", "B", "N")) %>%
   
   # Remove codes from board and IJB
   mutate(health_board = str_sub(health_board, 3, -1),
@@ -41,16 +41,21 @@ Home
 Row
 -------------------------------------------------
 
-### About This Report
+### **About This Report**
 
-This report has been produced by the Information Services Division (ISD) of NHS National Services Scotland and contains analysis of performance against the [Scottish Government's LDP Standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) on provision of Dementia Post Diagnostic Support (PDS).
+This report has been produced by Information Services Division (ISD), part of NHS National Services Scotland, and contains analysis of performance against the [Scottish Government's LDP Standard](https://www.gov.scot/About/Performance/scotPerforms/NHSScotlandperformance/Dementia-LDP) on provision of Dementia Post Diagnostic Support (PDS).
+
+<span style="color:red"> **The information contained in this report is for management information only and should not be distributed widely.** </span>
+
+These reports are an ongoing development following the implementation of the revised [Dementia PDS dataset](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf) effective 01 April 2019. As such, they are currently marked as **DRAFT** and may be subject to change in future versions.
 
 This report contains data for individuals diagnosed with dementia between **`r format(start_date, "%d %B %Y")`** and **`r format(end_date, "%d %B %Y")`** who were referred for post diagnostic support.
 
-*This paragraph needs reworded!* <br>
-Data is submitted to ISD by health boards on a quarterly basis and includes a refresh of all records with a diagnosis date from `r format(start_date, "%d %B %Y")` and also new records for individuals diagnosed and referred in the most recent quarter. Therefore, data for the full reporting period is refreshed in each management report based on the most recently submitted data. This report is based on data submitted in **`r sub_month(fy, qt)`**. More information regarding the Dementia PDS dataset and submission process can be found on the [Dementia PDS pages](www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/) of the [ISD website](www.isdscotland.org). 
+Data are submitted to ISD by health boards on a quarterly basis. Each health board provides updated information for all individuals referred for post diagnostic support with a diagnosis date from `r format(start_date, "%d %B %Y")` onwards. Therefore, data for the full reporting period is refreshed in each management report and is based on the most recently submitted data. This report is based on data submitted in `r sub_month(fy, qt)` and contains data as at **`r format(end_date, "%d %B %Y")`**. 
 
-These reports are an ongoing development following the implementation of the [revised Dementia PDS dataset](https://www.isdscotland.org/Health-Topics/Mental-Health/Dementia-Post-diagnostic-Support/_docs/Dementia-PDS-Definitions-and-Recording-Guidance.pdf). As such, they are currently marked as **DRAFT** and may change in the future. To ensure these reports are as useful as possible, we would welcome any comments or feedback you may have via the ISD Dementia PDS team mailbox at: [NSS.ISDDementiaPDS@nhs.net](mailto:NSS.ISDDementiaPDS@nhs.net).
+Information is shown at Scotland, Health Board and Integration Joint Board level using the drop down menus at the top of the page.
+
+To ensure these reports are as useful as possible, we would welcome any comments or feedback you may have via the ISD Dementia PDS team mailbox at: [NSS.ISDDementiaPDS@nhs.net](mailto:NSS.ISDDementiaPDS@nhs.net).
 
 
 
