Change 'ongoing' to 'PDS Ongoing'

--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -105,13 +105,14 @@ subpage_data %>%
            case_when(
              ldp == "complete" ~ "Standard Met",
              ldp == "fail" ~ "Standard Not Met",
+             ldp == "ongoing" ~ "PDS Ongoing",
              TRUE ~ str_to_title(ldp)
            )) %>%
   select(-ldp) %>%
   spread(ijb, referrals) %>%
   mutate_all(~ replace_na(., 0)) %>%
   mutate(`LDP Status` = fct_relevel(factor(`LDP Status`, levels = unique(.$`LDP Status`)),
-                                    "Standard Met", "Standard Not Met", "Ongoing", "Exempt", "Total")) %>%
+                                    "Standard Met", "Standard Not Met", "PDS Ongoing", "Exempt", "Total")) %>%
   arrange(`LDP Status`) %>%
   kable() %>%
   kable_styling(full_width = FALSE) %>%
