--- a/management-report/markdown/subpage-hb.Rmd
+++ b/management-report/markdown/subpage-hb.Rmd
@@ -121,7 +121,7 @@ subpage_data %>%
   pivot_wider(names_from = ldp, values_from = referrals) %>%
   mutate_all(~ replace_na(., 0)) %>%
   select(ijb, "Standard Met", "Standard Not Met", "PDS Ongoing", "Exempt", "Total") %>%
-  arrange(match(ijb, c(subpage_data$health_board, unique(subpage_data$ijb)))) %>%
+  arrange(match(ijb, c(subpage_data$health_board, sort(unique(subpage_data$ijb))))) %>%
   kable(col.names = c("", "Standard Met", "Standard Not Met", "PDS Ongoing", "Exempt", "Total")) %>%
   kable_styling(full_width = FALSE) %>%
   column_spec(1, bold = T)
